2005-08-12  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-help.c: (gnome_help_display_with_doc_id_and_env):
	Actually use the doc_id arg that's being passed in here. Reported
	by Damon Chaplin. Patch by Muktha Narayan. Closes bug #84148.

2005-08-12  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-data/Makefile.am: Hook it up in the build
	* gnome-data/gnome-options.7: New man page from Sebastien
	Bacher. Closes bug #125120.

2005-08-05  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Post release version bump.

==================== 2.11.2 =======================

2005-08-01  Elijah Newren  <newren@gmail.com>

	See http://mail.gnome.org/archives/desktop-devel-list/2005-August/msg00000.html
	and zillions of other d-d-l threads.

	* schemas/desktop_gnome_interface.schemas.in: Change default gtk
	theme theme to Clearlooks.  #312248.

2005-07-19  Mark McLoughlin  <mark@skynet.ie>

	See http://mail.gnome.org/archives/desktop-devel-list/2005-July/msg00341.html

	* schemas/desktop_gnome_applications_window_manager.schemas.in:
	Add deprecated notices to each of the keys.

2005-07-16  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump version
	* libgnome/gnome-score.c: (gnome_score_child): Fix
	typo that broke scores handling after the win32 merge.
	(Sebastien Bacher), Bug #309782.

2005-06-17  Tor Lillqvist  <tml@novell.com>

	* libgnome/gnome-init.h: Remove misleading comment about
	gnome_win32_get_prefixes(). No reason why it can't be used by
	applications, too.

	* libgnome/dllmain.c (gnome_win32_get_prefixes): Improve doc
	comment.

2005-06-11  Tor Lillqvist  <tml@novell.com>

	* libgnome/dllmain.c (gnome_win32_get_prefixes): Actually put
	locale charset, not UTF-8, into cp_prefix in two of the cases.

2005-06-09  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: Revert fix for bug #109238
	since it creates glib-WARNINGS when g_set_application_name()
	is called elsewhere first.

2005-05-30  Kjartan Maraas  <kmaraas@gnome.org>
