@@ -1,3 +1,8 @@
+2005-08-21  Tor Lillqvist  <tml@novell.com>
+
+	* libgnome/dllmain.c (gnome_win32_get_prefixes): Once more fix the
+	system codepage prefix setup logic.
+
 2005-08-12  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* libgnome/gnome-help.c: (gnome_help_display_with_doc_id_and_env):
